crates/rpgle-parser/src/ast/snapshots/rpgle_parser__ast__spec__tests__cspec_traditional_02.snap
---
source: crates/rpgle-parser/src/ast/spec.rs
assertion_line: 495
expression: observed
---
- C:
    code:
      Ok:
        op:
          Begsr:
            name: $CrtBRNEVT
            meta:
              span:
                start:
                  row: 0
                  col: 11
                end:
                  row: 0
                  col: 25
              text: "$CrtBRNEVT    "
            highlights: []
- []
